<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_bot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/fab"
    tools:context=".bot.BotFragment">

    <FrameLayout
        android:id="@+id/frame_icon"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_background_icon"
        app:layout_constraintBottom_toTopOf="@+id/view_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_icon"
            android:contentDescription="@string/text_bot" />

    </FrameLayout>

    <TextView
        android:id="@+id/text_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_blank_bot"
        app:layout_constraintStart_toEndOf="@+id/frame_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_background_top"
        app:layout_constraintTop_toBottomOf="@+id/frame_icon" />

    <FrameLayout
        android:id="@+id/frame_send"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/text_box_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_input"
        app:layout_constraintTop_toBottomOf="@+id/view_top">

        <ImageButton
            android:id="@+id/image_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background_icon"
            android:contentDescription="@string/text_send"
            android:src="@drawable/ic_send" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_background_input"
        android:contentDescription="@string/text_box_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top"
        app:layout_constraintVertical_bias="0.5">

        <EditText
            android:id="@+id/edit_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background_input"
            android:hint="@string/text_input_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/letter"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>