<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ScrollView
        android:id="@+id/scroll_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/liner_element_ion_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_element_ion_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_element_ion_1"
                    android:labelFor="@id/text_element_ion_1"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/text_element_ion_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_element_ion_1"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_element_ion_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_element_ion_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_element_ion_2"
                    android:labelFor="@id/text_element_ion_2"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/text_element_ion_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_element_ion_2"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_element_cov_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_element_cov_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_element_cov_1"
                    android:labelFor="@id/text_element_cov_1"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/text_element_cov_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_element_cov_1"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_element_cov_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_element_cov_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_element_cov_2"
                    android:labelFor="@id/text_element_cov_2"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/text_element_cov_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_element_cov_2"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_element_metal_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_element_metal_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_element_metal_1"
                    android:labelFor="@id/text_element_metal_1"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <TextView
                    android:id="@+id/text_element_metal_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_element_metal_1"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_level_ion_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_level_ion_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_level_ion_1"
                    android:labelFor="@id/text_level_ion_1"
                    android:rotation="180"
                    android:src="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/text_level_ion_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_level_ion_1"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_level_ion_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_level_ion_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_level_ion_2"
                    android:labelFor="@id/text_level_ion_2"
                    android:rotation="180"
                    android:src="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/text_level_ion_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_level_ion_2"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_level_cov_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_level_cov_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_level_cov_1"
                    android:labelFor="@id/text_level_cov_1"
                    android:rotation="180"
                    android:src="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/text_level_cov_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_level_cov_1"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_level_cov_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_level_cov_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_level_cov_2"
                    android:labelFor="@id/text_level_cov_2"
                    android:rotation="180"
                    android:src="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/text_level_cov_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_level_cov_2"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_level_metal_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"

                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_level_metal_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_level_metal_1"
                    android:labelFor="@id/text_level_metal_1"
                    android:rotation="180"
                    android:src="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/text_level_metal_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_level_metal_1"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liner_level_metal_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_level_metal_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/text_level_metal_2"
                    android:labelFor="@id/text_level_metal_2"
                    android:rotation="180"
                    android:src="@android:drawable/ic_menu_upload" />

                <TextView
                    android:id="@+id/text_level_metal_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/text_level_metal_2"
                    android:textAlignment="gravity"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>